Fix URL construction using URI.toURL() for Java compatibility