@@ -25,6 +25,7 @@ import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.io.PrintWriter;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -247,7 +248,7 @@ public class ValidateQuestions extends HttpServlet {
 			api_request.add("prompt", prompt);
 		
 			// Send request to OpenAI API
-			URL u = new URL("https://api.openai.com/v1/responses");
+			URL u = new URI("https://api.openai.com/v1/responses").toURL();
 			HttpURLConnection uc = (HttpURLConnection) u.openConnection();
 			uc.setRequestMethod("POST");
 			uc.setDoInput(true);
